@@ -471,21 +471,10 @@
             </statement>
             <proof>
                 <p>Suppose <m>A</m> has size <m>n</m>.  Then<md>
-                    <mrow>&amp;\lambda\text{ is an eigenvalue of }A</mrow>
-                    <mrow>&amp;\iff\text{ there exists }\vect{x}\neq\zerovector\text{ so that }A\vect{x}=\lambda\vect{x}&amp;&amp;
-                        <xref ref="definition-EEM" acro="EEM"/></mrow>
-                    <mrow>&amp;\iff \text{ there exists }\vect{x}\neq\zerovector\text{ so that }A\vect{x}-\lambda\vect{x}=\zerovector&amp;&amp;
-                        <xref ref="property-AIC" acro="AIC"/></mrow>
-                    <mrow>&amp;\iff \text{ there exists }\vect{x}\neq\zerovector\text{ so that }A\vect{x}-\lambda I_n\vect{x}=\zerovector&amp;&amp;
-                        <xref ref="theorem-MMIM" acro="MMIM"/></mrow>
-                    <mrow>&amp;\iff\text{ there exists }\vect{x}\neq\zerovector\text{ so that }(A-\lambda I_n)\vect{x}=\zerovector&amp;&amp;
-                        <xref ref="theorem-MMDAA" acro="MMDAA"/></mrow>
-                    <mrow>&amp;\iff A-\lambda I_n\text{ is singular}&amp;&amp;
-                        <xref ref="definition-NM" acro="NM"/></mrow>
-                    <mrow>&amp;\iff\detname{A-\lambda I_n}=0&amp;&amp;
-                        <xref ref="theorem-SMZD" acro="SMZD"/></mrow>
-                    <mrow>&amp;\iff\charpoly{A}{\lambda}=0&amp;&amp;
-                        <xref ref="definition-CP" acro="CP"/></mrow>
+                    <mrow>\lambda\text{ is an eigenvalue of }A
+                          &amp;\iff A-\lambda I_n\text{ is singular}&amp;&amp;<xref ref="theorem-ESM" acro="ESM"/></mrow>
+                    <mrow>&amp;\iff\detname{A-\lambda I_n}=0&amp;&amp;<xref ref="theorem-SMZD" acro="SMZD"/></mrow>
+                    <mrow>&amp;\iff\charpoly{A}{\lambda}=0&amp;&amp;<xref ref="definition-CP" acro="CP"/></mrow>
                 </md>.</p>
             </proof>
         </theorem>
