@@ -14,6 +14,13 @@ New: Theorem SIIS, Definition SOS, Theorem SSIS, Theorem SID
 *  Expand Example CAEHW and de-emphasize the notion that it is
 the "hard way" with a new title and acronym, now Example CASE.
 
+*  Formalize the basic connection between the singular matrix
+A - lambda I and an eigenvalue lambda with new Theorem ESM.
+Shortens proofs of Theorem ESM and Theorem EMRCP.
+
+*  Move Theorem MNEM earlier, with a new proof that does not
+use the characteristic polynomial.
+
 
 v X.XX
 ~~~~~~~~~~~~~~~~
@@ -51,6 +58,7 @@ Change: Rename Theorem NPNT as Theorem NPNF (Sam Webb)
 Change: Streamline the proof of Theorem NPNF
 Change: Expand Example CAEHW
 Change: Re-title Example CAEHW to Example CASE
+Change: Theorem EMRCP, shorter proof with new Theorem ESM
 Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
 Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
 Typo: Exercise MM.T12, correct reference, reword slightly (Matt Fergoda)
